[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piqrypt-openclaw-integration"
version = "1.1.0"
description = "PiQrypt cryptographic audit trail bridge for OpenClaw autonomous agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PiQrypt Contributors", email = "contact@piqrypt.com"}
]
requires-python = ">=3.9"
keywords = ["cryptography", "openclaw", "audit", "ai-agents", "aiss", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "piqrypt>=1.8.6",
]

[project.urls]
Homepage = "https://github.com/piqrypt/piqrypt-openclaw-integration"
Documentation = "https://github.com/piqrypt/piqrypt/blob/main/docs/OPENCLAW_INTEGRATION.md"
Repository = "https://github.com/piqrypt/piqrypt-openclaw-integration"
"Bug Tracker" = "https://github.com/piqrypt/piqrypt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["piqrypt_openclaw*"]
